--- a/atkomail-api/package.json
+++ b/atkomail-api/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@middy/core": "^2.4.3",
+    "@middy/http-cors": "^2.4.3",
     "@okta/jwt-verifier": "^2.3.0",
     "aws-sdk": "^2.954.0",
     "mailparser": "^3.2.0"
