Minimum working client

--- a/atkomail-api/serverless.yml
+++ b/atkomail-api/serverless.yml
@@ -24,6 +24,46 @@ provider:
             - 's3:DeleteObject'
           Resource: "arn:aws:s3:::atkoemail"
 
+resources:
+  Resources:
+    GatewayResponseDefault4XX: 
+      Type: 'AWS::ApiGateway::GatewayResponse'
+      Properties:
+        ResponseParameters:
+          gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
+          gatewayresponse.header.Access-Control-Allow-Headers: "'*'"
+        ResponseType: DEFAULT_4XX
+        RestApiId:
+          Ref: 'ApiGatewayRestApi'
+    GatewayResponseDefault5XX: 
+      Type: 'AWS::ApiGateway::GatewayResponse'
+      Properties:
+        ResponseParameters:
+          gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
+          gatewayresponse.header.Access-Control-Allow-Headers: "'*'"
+        ResponseType: DEFAULT_5XX
+        RestApiId:
+          Ref: 'ApiGatewayRestApi'
+    GatewayResponseBadParam: 
+      Type: 'AWS::ApiGateway::GatewayResponse'
+      Properties:
+        ResponseParameters:
+          gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
+          gatewayresponse.header.Access-Control-Allow-Headers: "'*'"
+        ResponseType: BAD_REQUEST_PARAMETERS
+        RestApiId:
+          Ref: 'ApiGatewayRestApi'
+    GatewayResponseNotFound: 
+      Type: 'AWS::ApiGateway::GatewayResponse'
+      Properties:
+        ResponseParameters:
+          gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
+          gatewayresponse.header.Access-Control-Allow-Headers: "'*'"
+        ResponseType: RESOURCE_NOT_FOUND
+        RestApiId:
+          Ref: 'ApiGatewayRestApi'
+                          
+
 functions:
   #Authorizers
   auth:
