--- a/atkomail-api/package.json
+++ b/atkomail-api/package.json
@@ -13,6 +13,7 @@
     "@middy/http-cors": "^2.4.3",
     "@okta/jwt-verifier": "^2.3.0",
     "aws-sdk": "^2.954.0",
-    "mailparser": "^3.2.0"
+    "mailparser": "^3.2.0",
+    "md5": "^2.3.0"
   }
 }
