--- a/atkomail-api/package.json
+++ b/atkomail-api/package.json
@@ -14,6 +14,7 @@
     "@okta/jwt-verifier": "^2.3.0",
     "aws-sdk": "^2.954.0",
     "mailparser": "^3.2.0",
-    "md5": "^2.3.0"
+    "md5": "^2.3.0",
+    "winston": "^3.3.3"
   }
 }
