--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
           SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
           SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT }}
         with:
+          environment: atkomail
           # When the flag is set and the previous release commit was not found in the repository, will create a release with the default commits count instead of failing the command.
           ignore_missing: true
           # When the flag is set, command will not fail and just exit silently if no new commits for a given release have been found.
