--- a/atkomail-client/package.json
+++ b/atkomail-client/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-time-ago": "^7.1.0",
+    "react-use-websocket": "^2.8.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "web-vitals": "^1.0.1"
