--- a/atkomail-api/package.json
+++ b/atkomail-api/package.json
@@ -15,6 +15,7 @@
     "aws-sdk": "^2.954.0",
     "mailparser": "^3.2.0",
     "md5": "^2.3.0",
+    "mixpanel": "^0.13.0",
     "winston": "^3.3.3"
   }
 }
