Implemented improved authorizer
Updated authorizer to correctly return policy object including context of the uid of the user. This UID is persistent where the sub is not

--- a/atkomail-api/package.json
+++ b/atkomail-api/package.json
@@ -4,7 +4,11 @@
   "description": "<!-- title: 'AWS Simple HTTP Endpoint example in NodeJS' description: 'This template demonstrates how to make a simple REST API with Node.js running on AWS Lambda and API Gateway using the traditional Serverless Framework.' layout: Doc framework: v2 platform: AWS language: nodeJS authorLink: 'https://github.com/serverless' authorName: 'Serverless, inc.' authorAvatar: 'https://avatars1.githubusercontent.com/u/13742415?s=200&v=4' -->",
   "main": "handler.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
+  },
+  "jest": {
+    "setupFiles":["./.jest/setEnvVars.js"],
+    "verbose": true
   },
   "author": "",
   "license": "ISC",
@@ -18,5 +22,8 @@
     "md5": "^2.3.0",
     "mixpanel": "^0.13.0",
     "winston": "^3.3.3"
+  },
+  "devDependencies": {
+    "jest": "^27.5.1"
   }
 }
