--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "chrome",
             "request": "launch",
             "url": "http://localhost:3000",
-            "webRoot": "${workspaceRoot}/atkomail-client"
+            "webRoot": "${workspaceRoot}/atkomail-client/src"
         }
     ]
 }
